--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/bordes_redondeados"
+        android:id="@+id/et_user"
         android:padding="15dp"/>
 
     <EditText
@@ -41,6 +42,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/bordes_redondeados"
+        android:id="@+id/et_password"
         android:padding="15dp"/>
 
     <Button
@@ -49,6 +51,7 @@
         android:text="Log in"
         android:textColor="#fff"
         android:background="#232f3f"
+        android:id="@+id/btn_login"
         android:layout_marginBottom="20dp"/>
 
     <TextView
@@ -62,6 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register"
+        android:id="@+id/tv_reg"
         android:textSize="25sp"/>
 
 </LinearLayout>
